--- a/package.json
+++ b/package.json
@@ -2,13 +2,33 @@
   "name": "delivery-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "2": "^3.0.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.13",
+    "@mui/x-date-pickers": "^5.0.8",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "argon": "^2.0.21",
+    "axios": "^1.1.3",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
+    "dotenv": "^16.0.3",
+    "epxress": "^0.0.1-security",
+    "express-session": "^1.17.3",
+    "http-proxy-middleware": "^2.0.6",
+    "mysql2": "^2.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
+    "sequelize": "^6.25.7",
+    "uuid-to-hex": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
